--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@ ga('send', 'pageview');
 <!-- End Google Analytics -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NTR95H9Z68"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YPX9PKN7K1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-NTR95H9Z68');
+  gtag('config', 'G-YPX9PKN7K1');
 </script>
-
 
 
 </head>
