--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         <a href="http://www.dp6.com.br/contato/" target="_blank" class="menu-lista-link menu-lista-contato">Entre em Contato</a>
       </li>
       <li class="menu-lista-item">
-        <a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf">Download PDF</a>
+        <!--<a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf">Download PDF</a>-->
+        <a href="#" class="menu-lista-link menu-lista-download" target="_pdf">Download PDF</a>
       </li>
     </ul>
     <div class="menu-rodape">
