--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 
+<!--GA4 -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RFZ5Y45RPJ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -17,6 +17,18 @@
 
   gtag('config', 'G-RFZ5Y45RPJ');
 </script>
+
+<!--GA UA-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-199953963-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-199953963-1');
+</script>
+
 
 
 </head>
