--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-199953963-1', 'auto');
     ga('send', 'pageview');
+    console.log('script interno body');
 </script>
 
   <link rel="stylesheet" href="css/lightbox.css">
