--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </li>
       <li class="menu-lista-item">
         <!--<a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf">Download PDF</a>-->
-        <a href="#" class="menu-lista-link menu-lista-download" target="_pdf">Download PDF</a>
+        <a href="#" class="menu-lista-link menu-lista-download" >Download PDF</a>
       </li>
     </ul>
     <div class="menu-rodape">
