--- a/analise.html
+++ b/analise.html
@@ -6,6 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" >
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <!--GA4 -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RFZ5Y45RPJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RFZ5Y45RPJ');
+</script>
+
+<!--GA UA-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-199953963-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-199953963-1');
+</script>
+
 </head>
 <body class="analise">
   <link rel="stylesheet" href="css/lightbox.css">
