--- a/sobre.html
+++ b/sobre.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <title>DP6 Case - Prova Técnica</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" >
+
+  <!--GA UA-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-199953963-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-12345-6');
+</script>
+  
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
