--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,18 @@
   <title>DP6 Case - Prova Técnica</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" >
 
-  <!--GA UA-->
+    <!--GA4 -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RFZ5Y45RPJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RFZ5Y45RPJ');
+</script>
+
+<!--GA UA-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-199953963-1"></script>
 <script>
@@ -13,23 +24,15 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-12345-6');
+  gtag('config', 'UA-199953963-1');
 </script>
-  
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="sobre">
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-12345-6', 'auto');
-    ga('send', 'pageview');
-    console.log('script interno body sobre');
-  </script>
+  
 
   <link rel="stylesheet" href="css/lightbox.css">
   <div class="lightbox-backdrop"></div>
